[package]
name = "sherpa-onnx"
version = "1.12.34"
edition = "2021"
description = "Safe Rust wrapper for sherpa-onnx speech recognition toolkit"
license = "Apache-2.0"
repository = "https://github.com/k2-fsa/sherpa-onnx"
documentation = "https://docs.rs/sherpa-onnx"
readme = "README.md"  # make sure this is inside the crate folder

keywords = ["speech", "speech-to-text", "stt", "onnx", "asr"]
categories = ["api-bindings", "multimedia::audio"]

# Explicitly list files to include in crates.io
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[features]
default = ["static"]
static = ["sherpa-onnx-sys/static"]
shared = ["sherpa-onnx-sys/shared"]

[dependencies]
sherpa-onnx-sys = { path = "../sherpa-onnx-sys", version = "1.12.34", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
default-features = false
features = []
