[package]
name = "non-streaming-speech-recognition-from-file"
version = "1.13.0"
description = "Non-streaming speech recognition from file with VAD"
edition = "2021"

[lib]
name = "non_streaming_speech_recognition_from_file_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
sherpa-onnx = { version = "1.13.0", default-features = false }
# sherpa-onnx = { path = "../../../sherpa-onnx/rust/sherpa-onnx", default-features = false }
# sherpa-onnx = { path = "../../../sherpa-onnx/rust/sherpa-onnx", default-features = false, features = ["static"] }
# sherpa-onnx = { path = "../../../sherpa-onnx/rust/sherpa-onnx", default-features = false, features = ["shared"] }

# symphonia: pure Rust audio decoder — no system deps, Tauri-packable.
# Supports: mp3, flac, aac, ogg/opus, wav, mp4/m4a, mkv/webm, aiff, etc.
symphonia = { version = "0.5.5", features = [
    "mp3",
    "aac",
    "flac",
    "vorbis",
    "wav",
    "ogg",
    "isomp4",
    "mkv",
    "pcm",
    "adpcm",
    "aiff",
    "caf",
] }
